--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 img {
-    display: inline-block;
-    height: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: 10px;
+    max-width: 5%;
+    height: auto;
   }
