--- a/style.css
+++ b/style.css
@@ -14,3 +14,8 @@ image {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
   }
+
+  .nextto{
+    display: inline-block;
+    width: 30%;
+  }
