--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ image {
   }
 
   body {
-    background-color: rgb(225, 216, 255);
+    background-image: linear-gradient(rgb(244, 241, 255), rgb(225, 216, 255));
   }
   
   p {
@@ -18,4 +18,13 @@ image {
   .nextto{
     display: inline-block;
     width: 30%;
+  }
+
+  .navbar{
+    width: 100%;
+    height: 50px;
+    padding: 0px;
+    border: 0px;
+    margin: 0;
+    color: aqua;
   }
