--- a/style.css
+++ b/style.css
@@ -6,13 +6,27 @@ image {
     height: auto;
   }
 
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
   body {
-    background-image: linear-gradient(rgb(244, 241, 255), rgb(225, 216, 255));
+    background-color: rgb(225, 216, 255);
   }
   
   p {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
+  }
+
+  a:hover {
+    color: rgb(146, 169, 240);
+  }
+
+  .descriptions {
+    background-image: linear-gradient(rgb(255, 255, 255), rgb(225, 216, 255));
   }
 
   .nextto{
@@ -21,10 +35,21 @@ image {
   }
 
   .navbar{
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    align-items: left;
+    justify-content: space-between;
+    padding: 1.5rem 3.5rem;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
-    height: 50px;
-    padding: 0px;
+    height: 100px;
     border: 0px;
-    margin: 0;
     background-color: aqua;
+  }
+
+  html {
+    scroll-behavior: smooth;
   }
