--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ image {
   }
   
   p {
+    border: 10px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
   }
@@ -50,6 +51,62 @@ image {
     border: 0px;
     background-color: rgb(225, 216, 255);
   }
+
+  section
+{
+  min-height: 100vh;
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title
+{
+  font-size: 3rem;
+  margin: 2rem 0;
+}
+
+.faq
+{
+  max-width: 700px;
+  margin-top: 2rem;
+  padding-bottom: 1rem;
+  border-bottom: 2px solid #fff;
+  cursor: pointer;
+}
+
+.question
+{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.question h3
+{
+  font-size: 1.8rem;
+}
+
+.answer
+{
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 1s ease-in-out;
+}
+
+.answer p
+{
+  padding-top: 1rem;
+  line-height: 1.6;
+  font-size: 1.4rem;
+}
+
+.faq.active .answer
+{
+  max-height: 300px;
+}
 
   html {
     scroll-behavior: smooth;
