--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ image {
   }
 
   .block{
-    height: 20px;
+    padding: 20px;
   }
 
   .navbar{
@@ -106,6 +106,33 @@ image {
 .faq.active .answer
 {
   max-height: 300px;
+}
+
+
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: #ccc;
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
 }
 
   html {
