--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 image {
     display: block;
-    margin-left: auto;
+    margin-left: 10px;
     margin-right: 10px;
     max-width: 5%;
+    padding-left: 20px;
     height: auto;
   }
 
@@ -32,7 +33,7 @@ image {
   }
 
   .block{
-    padding: 20px;
+    padding: 80px;
   }
 
   .navbar{
