--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ image {
     display: block;
     margin-left: 10px;
     margin-right: 10px;
-    max-width: 5%;
+    max-width: 100%;
+    max-height: 100%;
     padding-left: 20px;
     height: auto;
   }
@@ -29,7 +30,7 @@ image {
 
   .nextto{
     display: inline-block;
-    width: 30%;
+    width: 300px;
   }
 
   .block{
